--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -44,14 +44,9 @@
 					<ace:tabPane label="Harrastajat">
 						<ui:include src="harrastajat/harrastajat.xhtml" />
 					</ace:tabPane>
-					<ace:tabPane label="Harjoitukset">
-						<ui:include src="treenit/treenit.xhtml" />
+					<ace:tabPane label="Perustiedot">
+						<ui:include src="perustiedot/perustiedot.xhtml" />
 					</ace:tabPane>
-
-					<!-- 					
-					<ace:tabPane label="Treenikäynnit">
-					</ace:tabPane>
--->
 				</ace:tabSet>
 
 			</h:form>
