--- a/src/main/webapp/admin/perustiedot/perustiedot.xhtml
+++ b/src/main/webapp/admin/perustiedot/perustiedot.xhtml
@@ -9,6 +9,7 @@
 			<ui:include src="roolit.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Vyöarvot">
+			<ui:include src="vyöarvot.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Treenityypit">
 		</ace:tabPane>
