--- a/src/main/webapp/admin/perustiedot/perustiedot.xhtml
+++ b/src/main/webapp/admin/perustiedot/perustiedot.xhtml
@@ -12,6 +12,7 @@
 			<ui:include src="vyöarvot.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Treenityypit">
+			<ui:include src="treenityypit.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Sopimustyypit">
 		</ace:tabPane>
