--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -20,7 +20,7 @@
 						<h:outputText value="Nimi" />
 						<h:panelGrid>
 							<ace:message for="form:rooli" />
-							<h:inputText value="#{rooli.nimi}" />
+							<h:inputText value="#{rooli.nimi}" id="rooli"/>
 						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
