--- a/src/main/webapp/admin/perustiedot/treenit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenit.xhtml
@@ -48,7 +48,7 @@
 				<h:outputText value="Tyyppi" />
 				<h:panelGrid>
 					<ace:message for="form:treenityyppi" />
-					<h:selectOneMenu value="#{treeni.tyyppi}" id="treenityyppi">
+					<h:selectOneMenu value="#{treeni.tyyppi}" id="treenityyppi" style="width:200px">
 						<f:selectItems value="#{treenityypit}" var="_tyyppi" itemValue="#{_tyyppi}" itemLabel="#{_tyyppi.nimi}" />
 						<f:converter converterId="objectConverter" />
 					</h:selectOneMenu>
@@ -56,7 +56,7 @@
 				<h:outputText value="Päivä" />
 				<h:panelGrid>
 					<ace:message for="form:treenipäivä" />
-					<h:selectOneMenu value="#{treeni.päivä}" id="treenipäivä">
+					<h:selectOneMenu value="#{treeni.päivä}" id="treenipäivä" style="width:200px">
 						<f:selectItems value="#{viikonpäivät}" var="_viikonpäivä" itemValue="#{_viikonpäivä}" itemLabel="#{_viikonpäivä}" />
 					</h:selectOneMenu>
 				</h:panelGrid>
