--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -1,8 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{harrastajaAdmin.lisääHarrastaja}" value="x" styleClass="ikoni"
-		image="/kuvat/lisää.png" immediate="true">
+	<h:commandButton action="#{harrastajaAdmin.lisääHarrastaja}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+		immediate="true">
 		<f:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single"
@@ -21,10 +21,13 @@
 		<ace:column headerText="Vyöarvo">
 			<h:outputText value="#{_harrastaja.tuoreinVyöarvo.nimi}" />
 		</ace:column>
+		<ace:column headerText="Arkistoitu">
+			<h:outputText value="#{_harrastaja.henkilö.arkistoitu ? 'kyllä' : 'ei'}" />
+		</ace:column>
 	</ace:dataTable>
 	<p />
 	<ace:tabSet rendered="#{harrastaja != null}">
-		<ace:tabPane label="Perustietot">
+		<ace:tabPane label="Perustiedot">
 			<ui:include src="perustiedot.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Treenikäynnit">
@@ -33,9 +36,10 @@
 		<ace:tabPane label="Vyökokeet">
 			<ui:include src="vyökokeet.xhtml" />
 		</ace:tabPane>
-		<ace:tabPane label="Maksutiedot">
+		<ace:tabPane label="Sopimukset">
+			<ui:include src="sopimukset.xhtml" />
 		</ace:tabPane>
-		<ace:tabPane label="Kisatulokset">
+		<ace:tabPane label="Tulokset">
 		</ace:tabPane>
 		<ace:tabPane label="Roolit">
 			<ui:include src="roolit.xhtml" />
