--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -1,12 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{vyökoeAdmin.lisääVyökoe(harrastaja)}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+	<h:commandButton action="#{harrastajaAdmin.lisääVyökoe}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 		immediate="true">
 		<ace:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe" selectionMode="single" rows="10"
-		rowSelectListener="#{vyökoeAdmin.vyökoeValittu}">
+		rowSelectListener="#{harrastajaAdmin.vyökoeValittu}" stateMap="#{harrastajaAdmin.vyökoeRSM}">
 		<ace:column>
 			<h:graphicImage value="/kuvat/vyöt/#{_vyökoe.vyöarvo.id}.png" />
 		</ace:column>
@@ -15,7 +15,7 @@
 		</ace:column>
 		<ace:column headerText="Päivä">
 			<h:outputText value="#{_vyökoe.päivä}">
-				<f:convertDateTime pattern="dd.MM.yyyy" />
+				<f:convertDateTime pattern="dd.MM.yyyy" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Päiviä välissä">
@@ -24,14 +24,14 @@
 		<ace:column headerText="Seuraavaan kokeeseen">
 			<h:panelGrid columns="2" rendered="#{_vyökoe.tuoreinVyökoe}">
 				<h:outputText value="Päiviä" />
-				<h:outputText value="#{vyökoeAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).päiviä}" />
+				<h:outputText value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).päiviä}" />
 				<h:outputText value="Treenikertoja" />
-				<h:outputText value="#{vyökoeAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja}" />
+				<h:outputText value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja}" />
 			</h:panelGrid>
 		</ace:column>
 	</ace:dataTable>
 	<p />
-	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}" style="width:300px" id="vyökoepanel">
+	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}" style="width:300px" id="vyökoepaneli">
 		<h:panelGrid>
 			<h:outputText value="Vyöarvo" />
 			<h:panelGrid>
@@ -44,15 +44,19 @@
 			<h:outputText value="Päivä" />
 			<h:panelGrid>
 				<ace:message for="form:vyökoepäivä" />
-				<ace:dateTimeEntry value="#{vyökoe.päivä}" renderAsPopup="true" pattern="dd.MM.yyyy" id="vyökoepäivä" />
+				<ace:dateTimeEntry value="#{vyökoe.päivä}" renderAsPopup="true" pattern="dd.MM.yyyy" id="vyökoepäivä" timeZone="EET" />
 			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
 	<h:commandButton rendered="#{vyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-		actionListener="#{harrastajaAdmin.tallennaVyökoe(vyökoe)}" action="#{vyökoeAdmin.piilotaVyökoe}" />
+		action="#{harrastajaAdmin.tallennaVyökoe}">
+		<f:ajax execute="@form" render="@form" />
+	</h:commandButton>
 	<h:commandButton rendered="#{vyökoe != null}" value="x" styleClass="ikoni" immediate="true"
-		action="#{vyökoeAdmin.peruutaMuutos}" image="/kuvat/peruuta_muutos.png" />
+		action="#{harrastajaAdmin.peruutaVyökoemuutos}" image="/kuvat/peruuta_muutos.png">
+		<f:ajax render="@form" />
+	</h:commandButton>
 	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x" styleClass="ikoni"
-		actionListener="#{harrastajaAdmin.poistaVyökoe(vyökoe)}" action="#{vyökoeAdmin.piilotaVyökoe}"
-		image="/kuvat/poista.png" immediate="true" />
+		actionListener="#{harrastajaAdmin.poistaVyökoe}" action="#{harrastajaAdmin.piilotaVyökoe}" image="/kuvat/poista.png"
+		immediate="true" />
 </ui:composition>
