--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -31,7 +31,7 @@
 		</ace:column>
 	</ace:dataTable>
 	<p />
-	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}" style="width:300px" id="vyökoepaneli">
+	<ace:panel header="Vyökoetiedot" rendered="#{vyökoe != null}" style="width:300px">
 		<h:panelGrid>
 			<h:outputText value="Vyöarvo" />
 			<h:panelGrid>
