--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -38,9 +38,9 @@
 						action="#{perustietoAdmin.piilotaRooli}" image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö" style="width:300px" rendered="#{rooli != null and rooli.poistettavissa}" >
+			<ace:panel header="Käyttö (#{fn:length(rooliKäyttö)})" style="width:300px" rendered="#{rooli != null and rooli.poistettavissa}" >
 				<ace:dataTable value="#{rooliKäyttö}" var="_henkilö" rows="10" rendered="#{fn:length(rooliKäyttö) > 0}">
-					<ace:column headerText="Käytössä (#{fn:length(rooliKäyttö)})">
+					<ace:column>
 						<h:outputText value="#{_henkilö.nimi}" />
 					</ace:column>
 				</ace:dataTable>
