--- a/src/main/webapp/admin/perustiedot/perustiedot.xhtml
+++ b/src/main/webapp/admin/perustiedot/perustiedot.xhtml
@@ -15,6 +15,7 @@
 			<ui:include src="treenityypit.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Sopimustyypit">
+			<ui:include src="sopimustyypit.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Kisatyypit">
 		</ace:tabPane>
