--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -22,7 +22,7 @@
 			<h:outputText value="#{_harrastaja.tuoreinVyöarvo.nimi}" />
 		</ace:column>
 		<ace:column headerText="Arkistoitu">
-			<h:outputText value="#{_harrastaja.henkilö.arkistoitu ? 'Kyllä' : 'Ei'}" />
+			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.henkilö.arkistoitu}" />
 		</ace:column>
 	</ace:dataTable>
 	<p />
