--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -47,6 +47,9 @@
 					<ace:tabPane label="Perustiedot">
 						<ui:include src="perustiedot/perustiedot.xhtml" />
 					</ace:tabPane>
+					<ace:tabPane label="Raportit">
+						<ui:include src="raportit.xhtml" />
+					</ace:tabPane>
 				</ace:tabSet>
 
 			</h:form>
