--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -21,6 +21,9 @@
 		<ace:column headerText="Vyöarvo">
 			<h:outputText value="#{_harrastaja.tuoreinVyöarvo.nimi}" />
 		</ace:column>
+		<ace:column headerText="Maksut">
+			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.maksutOK}" />
+		</ace:column>
 		<ace:column headerText="Arkistoitu">
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.henkilö.arkistoitu}" />
 		</ace:column>
