--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -1,12 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{harrastajaAdmin.lisääSopimus}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
+	<h:commandButton action="#{harrastajaAdmin.lisääSopimus()}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 		immediate="true" stateMap="#{harrastajaAdmin.sopimusRSM}">
 		<ace:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{harrastaja.sopimukset}" var="_sopimus" selectionMode="single" rows="10"
-		rowSelectListener="#{harrastajaAdmin.sopimusValittu}">
+		rowSelectListener="#{harrastajaAdmin.sopimusValittu}" stateMap="#{harrastajaAdmin.sopimusRSM}">
 		<ace:column headerText="Tyyppi">
 			<h:outputText value="#{_sopimus.tyyppi.nimi}" />
 		</ace:column>
@@ -23,10 +23,35 @@
 		</ace:column>
 	</ace:dataTable>
 	<p />
-	<ace:panel header="Sopimustiedot" rendered="#{sopimus != null}" style="width:300px">
+	<ace:panel header="Sopimustiedot" rendered="#{sopimus != null}" style="width:350px">
 		<h:panelGrid columns="2">
-			<h:outputText value="Nimi" />
-			<h:inputText value="#{sopimus.tyyppi.nimi}" />
+			<h:outputText value="Tyyppi" />
+			<h:panelGrid>
+				<ace:message for="form:sopimustyyppi" />
+				<h:selectOneMenu value="#{sopimus.tyyppi}" id="sopimustyyppi">
+					<f:selectItems value="#{kaikkiSopimustyypit}" var="_sopimustyyppi" itemValue="#{_sopimustyyppi}"
+						itemLabel="#{_sopimustyyppi.nimi}" />
+					<f:converter converterId="objectConverter" />
+				</h:selectOneMenu>
+			</h:panelGrid>
+			<h:outputText value="Umpeutuu" />
+			<h:panelGrid>
+				<ace:message for="form:umpeutuu" />
+				<ace:dateTimeEntry value="#{sopimus.umpeutuu}" renderAsPopup="true" pattern="dd.MM.yyyy" id="umpeutuu" />
+			</h:panelGrid>
+			<h:outputText value="Treenikertoja" />
+			<h:panelGrid>
+				<ace:message for="form:a_treenikertoja" />
+				<h:inputText value="#{sopimus.treenikertoja}" id="a_treenikertoja" size="5" />
+			</h:panelGrid>
+			<h:outputText value="Maksuväli" />
+			<h:panelGrid>
+				<ace:message for="form:maksuväli" />
+				<h:selectOneMenu value="#{sopimus.maksuväli}">
+					<f:selectItem itemValue="6" itemLabel="6kk" />
+					<f:selectItem itemValue="12" itemLabel="12kk" />
+				</h:selectOneMenu>
+			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
 	<h:commandButton rendered="#{sopimus != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
